Work on project: - finish all classes; - refactoring packages; - fill main method.